Archive2/6c/6e1355ad1fb166/output
main.cpp:5:24: warning: 'my_function' function uses 'auto' type specifier without trailing return type [enabled by default]
 auto my_function(int* x){
                        ^
main.cpp: In function 'int main()':
main.cpp:12:22: error: invalid conversion from 'int' to 'int*' [-fpermissive]
     my_function(myNum);
                      ^
